--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "^10.4.12",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-echo": "^1.14.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.16",
         "pusher-js": "^7.4.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.1.8",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
